--- a/univariate-continuous.Rmd
+++ b/univariate-continuous.Rmd
@@ -7,7 +7,9 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning=FALSE,
+                      comment="", digits = 3, tidy = FALSE, prompt = FALSE, fig.align = 'center')
+
 xaringanExtra::use_panelset()
 ```
 
